[package]
name = "radardevice"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
tokio = {version = "1", features = ["full"]}
reqwest = {version = "0.12.15", features = ["json"]}
serde_json = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
csv = "1"
rand = "0.9.1"